--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cupertino_icons: ^1.0.0
   google_maps_flutter: ^1.0.6
   location: ^3.2.1
+  cloud_firestore:
 
 dev_dependencies:
   flutter_test:
