--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   location: ^3.2.1
   cloud_firestore:
   firebase_core: ^0.5.3
+  url_launcher: ^5.7.10
+
 
 dev_dependencies:
   flutter_test:
