--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   firebase_core: ^0.5.3
   url_launcher: ^5.7.10
   pull_to_refresh: ^1.6.3
+  latlong: ^0.6.1
 
 
 dev_dependencies:
