--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   url_launcher: ^5.7.10
   pull_to_refresh: ^1.6.3
   latlong: ^0.6.1
+  path_provider: ^1.6.27
 
 
 dev_dependencies:
