--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -23,15 +23,10 @@ if (flutterVersionName == null) {
 
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
-apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 apply plugin: 'com.google.gms.google-services'
-
+apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
 android {
-    defaultConfig {
-        multiDexEnabled true
-    }
-
     compileSdkVersion 29
 
     sourceSets {
@@ -44,7 +39,7 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "edu.muhlenberg.allentownFoodDistribution"
+        applicationId "edu.muhlenberg.allentownfooddist"
         minSdkVersion 16
         targetSdkVersion 29
         versionCode flutterVersionCode.toInteger()
@@ -67,5 +62,4 @@ flutter {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation platform('com.google.firebase:firebase-bom:26.4.0')
-    implementation 'com.android.support:multidex:2.0.1' //enter the latest version
 }
