--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.atownfooddistribution">
+    package="edu.muhlenberg.allentownfooddist">
     <!-- io.flutter.app.FlutterApplication is an android.app.Application that
          calls FlutterMain.startInitialization(this); in its onCreate method.
          In most cases you can leave this as-is, but you if you want to provide
@@ -7,12 +7,12 @@
          FlutterApplication and put your custom class here. -->
     <application
         android:name="io.flutter.app.FlutterApplication"
-        android:label="atownfooddistribution"
+        android:label="allentownfooddist"
         android:icon="@mipmap/ic_launcher">
 
-        <meta-data android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyDq9Jb1cnQYqKfHi8wkMpRNX_POySGxAvg"/>
 
+        <meta-data android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyD1jYn3z8sIoyykbLOjssn4LAx2P-0KXpw"/>
 
         <activity
             android:name=".MainActivity"
