--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,5 @@
-name: allentownfooddist
+name: distfoodapp
 description: A new Flutter application.
-
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
@@ -28,19 +27,17 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.0
-  google_maps_flutter: ^1.0.6
-  location: ^3.2.1
-  cloud_firestore:
-  firebase_core: ^0.5.3
-  url_launcher: ^5.7.10
-  pull_to_refresh: 1.6.3
+  cupertino_icons: ^1.0.2
+  location: ^4.1.1
+  cloud_firestore: ^1.0.7
+  firebase_core: ^1.1.0
+  google_maps_flutter: ^2.0.3
+  firebase_auth: ^1.1.2
+  url_launcher: ^6.0.3
+  pull_to_refresh: ^1.6.5
   latlong: ^0.6.1
-  path_provider: ^1.6.27
+  path_provider: ^2.0.1
   table_calendar: ^2.3.3
-  firebase_auth: ^0.18.1
-
-
 
 dev_dependencies:
   flutter_test:
@@ -56,4 +53,5 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
 
